Изменил Node на шаблонный класс и создал лист сабджектов

--- a/CourseWork/CourseWork.vcxproj
+++ b/CourseWork/CourseWork.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="DateOfBirth.h" />
+    <ClInclude Include="ListOfSubjects.h" />
     <ClInclude Include="Node.h" />
     <ClInclude Include="RecordBook.h" />
     <ClInclude Include="Student.h" />
