--- a/CourseWork/CourseWork.vcxproj.filters
+++ b/CourseWork/CourseWork.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="Node.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="ListOfSubjects.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Student.cpp">
