--- a/CourseWork/CourseWork.vcxproj
+++ b/CourseWork/CourseWork.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="DateOfBirth.h" />
+    <ClInclude Include="InputValidation.h" />
     <ClInclude Include="ListOfSessions.h" />
     <ClInclude Include="ListOfSubjects.h" />
     <ClInclude Include="Node.h" />
@@ -140,6 +141,7 @@
   <ItemGroup>
     <ClCompile Include="DateOfBirth.cpp" />
     <ClCompile Include="DBOfStudents.cpp" />
+    <ClCompile Include="InputValidation.cpp" />
     <ClCompile Include="ListOfSessions.cpp" />
     <ClCompile Include="OneLinkedList.h" />
     <ClCompile Include="Person.cpp" />
