--- a/CourseWork/CourseWork.vcxproj.filters
+++ b/CourseWork/CourseWork.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="InputValidation.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="List.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Student.cpp">
