--- a/CourseWork/CourseWork.vcxproj.filters
+++ b/CourseWork/CourseWork.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="Menu.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="CryptoTools.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Student.cpp">
