--- a/CourseWork/CourseWork.vcxproj
+++ b/CourseWork/CourseWork.vcxproj
@@ -128,6 +128,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="CryptoTools.h" />
+    <ClInclude Include="Decrypt.h" />
+    <ClInclude Include="Encrypt.h" />
     <ClInclude Include="DateOfBirth.h" />
     <ClInclude Include="InputValidation.h" />
     <ClInclude Include="List.h" />
